# SE.20231

./: .eslintrc.cjs  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js  tsconfig.node.json  vite.config.ts
Design/: page1.html  page2.html  page3.html  page4.html  style.css
Design2/: slide16.html  slide17.html  slide17_2.html
Design2/Login&register/: login.html  register.css  register.html  stylelogin.css
Design2/Nhân khẩu hộ khẩu/: slide10.html  slide11.html  slide14.html  slide15.html
Design2/Thu phí/: slide18.html
Design2/Tìm kiếm&thống kê/: slide3.html  slide4.html  slide5.html  slide6.html  slide7.html  slide8.html  slide9.html
SE_Backend/: __init__.py  config.py
SE_Backend/database/: away.py  (+12 more)
backend/: .gitignore  LICENSE  README.md  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 9c018d8a7c4a_initial_migration.py
backend/server/: __init__.py
backend/server/database/: __init__.py  household_registration.py  payment.py  person.py  reward.py  user.py
backend/server/models/: __init__.py  away.py  birth.py  income.py  payment.py  person.py  reward.py  spending.py  user.py  vehicle.py
backend/server/routes/: __init__.py  household_registrations.py  payments.py  people.py  rewards.py  users.py
backend/server/schemas/: __init__.py  away.py  birth.py  household_registration.py  income.py  payment.py  person.py  relationship.py  reward.py  spending.py  user.py  vehicle.py
electron/: electron-env.d.ts
frontend/: style.css
src/: main.ts  parseToken.ts  router.ts  store.ts  style.css  validationRules.ts
(+145 files in other folders)
