[tool.poetry]
name = "hust-software-engineering-server"
version = "0.1.0"
description = ""
authors = ["j1nxie <rylieeeeexd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.23"
fastapi = "^0.104.1"
uvicorn = { extras = ["standard"], version = "^0.24.0.post1" }
argon2-cffi = "^23.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ruff = "^0.1.6"
watchdog = "^3.0.0"
poethepoet = "^0.24.4"

[tool.poe.tasks.dev]
cmd = "poetry run uvicorn server:app --reload"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
